force-app/main/default/objects/Closing_hz__c/fields/Inspection_Termite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Termite_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termite Inspection Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Inspection Co. Contact)</relationshipLabel>
    <relationshipName>Closings_Inspection_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>