force-app/main/default/objects/Closing_hz__c/fields/Inspections_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Inspections_Frequency__c</fullName>
    <label>Inspections Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>9 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>