force-app/main/default/objects/Closing_hz__c/fields/Intro_Call__c.field-meta.xml
<CustomField>
    <fullName>Intro_Call__c</fullName>
    <description>Make an intro call to the buyers to congratulate them and request AML documents</description>
    <label>Intro Call</label>
    <type>Date</type>
</CustomField>