force-app/main/default/objects/Closing_hz__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice - Agent to approve</label>
    <type>Checkbox</type>
</CustomField>