force-app/main/default/objects/Closing_hz__c/fields/Invoice_if_referal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_if_referal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice - if referal</label>
    <type>Checkbox</type>
</CustomField>