force-app/main/default/objects/Closing_hz__c/fields/Is_Now_Periodic__c.field-meta.xml
<CustomField>
    <fullName>Is_Now_Periodic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Now Periodic</label>
    <type>Checkbox</type>
</CustomField>