force-app/main/default/objects/Closing_hz__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Landlord)</relationshipLabel>
    <relationshipName>Closings6</relationshipName>
    <type>Lookup</type>
</CustomField>