force-app/main/default/objects/Closing_hz__c/fields/Landlord_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Nationality__c</fullName>
    <formula>Landlord_c__r.OtherCountry</formula>
    <label>Landlord Nationality</label>
    <type>Text</type>
</CustomField>