force-app/main/default/objects/Closing_hz__c/fields/Lease_Terms__c.field-meta.xml
<CustomField>
    <fullName>Lease_Terms__c</fullName>
    <label>Lease Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Month</fullName>
            </value>
            <value>
                <fullName>6 Month</fullName>
            </value>
            <value>
                <fullName>9 Month</fullName>
            </value>
            <value>
                <fullName>12 Month</fullName>
            </value>
            <value>
                <fullName>13 Month</fullName>
            </value>
            <value>
                <fullName>15 Month</fullName>
            </value>
            <value>
                <fullName>18 Month</fullName>
            </value>
            <value>
                <fullName>24 Month</fullName>
            </value>
            <value>
                <fullName>36 Month</fullName>
            </value>
            <value>
                <fullName>48 Month</fullName>
            </value>
            <value>
                <fullName>60 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>