force-app/main/default/objects/Closing_hz__c/fields/LeaseTermNumber__c.field-meta.xml
<CustomField>
    <fullName>LeaseTermNumber__c</fullName>
    <formula>VALUE(TRIM(LEFT(TEXT( Lease_Terms__c ), FIND(&quot; &quot;, TEXT(Lease_Terms__c )))))</formula>
    <label>Lease Term Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>