force-app/main/default/objects/Closing_hz__c/fields/Letting_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Letting_Service_Type__c</fullName>
    <formula>IF(RecordType.Name == &apos;Rent&apos;,TEXT(Listing_hz__r.Letting_Service_Type__c),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letting Service Type</label>
    <type>Text</type>
</CustomField>