force-app/main/default/objects/Closing_hz__c/fields/Listing_Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agency_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Agency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings as Listing Agent</relationshipLabel>
    <relationshipName>Closings_Listing_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>