force-app/main/default/objects/Closing_hz__c/fields/Listing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Agreement</label>
    <type>Checkbox</type>
</CustomField>