force-app/main/default/objects/Closing_hz__c/fields/Listing_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agreement_Date__c</fullName>
    <label>Listing Agreement Date</label>
    <type>Date</type>
</CustomField>