force-app/main/default/objects/Closing_hz__c/fields/Listing_hz__c.field-meta.xml
<CustomField>
    <fullName>Listing_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>