force-app/main/default/objects/Closing_hz__c/fields/Listing_PN__c.field-meta.xml
<CustomField>
    <fullName>Listing_PN__c</fullName>
    <label>Listing PN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>