force-app/main/default/objects/Closing_hz__c/fields/Listing_Status_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status_Update_Date__c</fullName>
    <label>Listing Status Update Date</label>
    <type>Date</type>
</CustomField>