force-app/main/default/objects/Closing_hz__c/fields/ListingNameForSearch__c.field-meta.xml
<CustomField>
    <fullName>ListingNameForSearch__c</fullName>
    <label>ListingNameForSearch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>