force-app/main/default/objects/Closing_hz__c/fields/Memos_Sent__c.field-meta.xml
<CustomField>
    <fullName>Memos_Sent__c</fullName>
    <inlineHelpText>the date the memos were sent</inlineHelpText>
    <label>Memos Sent</label>
    <type>Date</type>
</CustomField>