force-app/main/default/objects/Closing_hz__c/fields/MLS_Update_Status__c.field-meta.xml
<CustomField>
    <fullName>MLS_Update_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Status Update (MLS/Portal)</label>
    <type>Checkbox</type>
</CustomField>