force-app/main/default/objects/Closing_hz__c/fields/Mortgage_Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Broker_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgage Broker Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Mortgage Broker Contact)</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>