force-app/main/default/objects/Closing_hz__c/fields/Mortgage_Loan_Approval_w_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Loan_Approval_w_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Loan Approval w/ Conditions</label>
    <type>Checkbox</type>
</CustomField>