force-app/main/default/objects/Closing_hz__c/fields/Mortgage_Offer_Issued__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Offer_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Offer Issued</label>
    <type>Checkbox</type>
</CustomField>