force-app/main/default/objects/Closing_hz__c/fields/Mortgage_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Survey_Date__c</fullName>
    <label>Mortgage Survey Date</label>
    <type>Date</type>
</CustomField>