force-app/main/default/objects/Closing_hz__c/fields/Moving_Out__c.field-meta.xml
<CustomField>
    <fullName>Moving_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moving Out</label>
    <type>Checkbox</type>
</CustomField>