force-app/main/default/objects/Closing_hz__c/fields/notes_SA__c.field-meta.xml
<CustomField>
    <fullName>notes_SA__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>