force-app/main/default/objects/Closing_hz__c/fields/Notice_Served__c.field-meta.xml
<CustomField>
    <fullName>Notice_Served__c</fullName>
    <label>Notice Served</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Tenant</fullName>
            </value>
            <value>
                <fullName>By Landlord</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>