force-app/main/default/objects/Closing_hz__c/fields/of_Original_List_Price__c.field-meta.xml
<CustomField>
    <fullName>of_Original_List_Price__c</fullName>
    <formula>( Sale_Price__c  / Listing_hz__r.OriginalListPrice_hz__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Original List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>