force-app/main/default/objects/Closing_hz__c/fields/Offer_hz__c.field-meta.xml
<CustomField>
    <fullName>Offer_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Selected offer refers to other Listing than Closing.</errorMessage>
        <filterItems>
            <field>$Source.Listing_hz__c</field>
            <operation>equals</operation>
            <valueField>Offer_hz__c.Listing_hz__c</valueField>
        </filterItems>
        <infoMessage>Please make sure your offer refers to the same Listing as this Closing record.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Offer_hz__c</referenceTo>
    <relationshipLabel>Closings</relationshipLabel>
    <relationshipName>Closings</relationshipName>
    <type>Lookup</type>
</CustomField>