force-app/main/default/objects/Closing_hz__c/fields/Order_Homebox__c.field-meta.xml
<CustomField>
    <fullName>Order_Homebox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Homebox</label>
    <type>Checkbox</type>
</CustomField>