force-app/main/default/objects/Closing_hz__c/fields/Order_Present_if_required__c.field-meta.xml
<CustomField>
    <fullName>Order_Present_if_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Present if required</label>
    <type>Checkbox</type>
</CustomField>