force-app/main/default/objects/Closing_hz__c/fields/Other_Costs_to_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs_to_Landlord__c</fullName>
    <inlineHelpText>Put anything in this box that needs to be charged to landlord on move in</inlineHelpText>
    <label>Other Costs to Landlord</label>
    <type>TextArea</type>
</CustomField>