force-app/main/default/objects/Closing_hz__c/fields/Passed_to_ASAP__c.field-meta.xml
<CustomField>
    <fullName>Passed_to_ASAP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick this box if ASAP is helping with the day to day sale progression</inlineHelpText>
    <label>Passed to ASAP</label>
    <type>Checkbox</type>
</CustomField>