force-app/main/default/objects/Closing_hz__c/fields/Please_Connect_Me__c.field-meta.xml
<CustomField>
    <fullName>Please_Connect_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for lead creation on Please Connect Me</description>
    <label>Please Connect Me</label>
    <type>Checkbox</type>
</CustomField>