force-app/main/default/objects/Closing_hz__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <inlineHelpText>Address of property they are buying</inlineHelpText>
    <label>Property Address</label>
    <type>TextArea</type>
</CustomField>