force-app/main/default/objects/Closing_hz__c/fields/Property_Inspections__c.field-meta.xml
<CustomField>
    <fullName>Property_Inspections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Inspections</label>
    <type>Checkbox</type>
</CustomField>