force-app/main/default/objects/Closing_hz__c/fields/Property_Inspections_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Inspections_Date__c</fullName>
    <label>Property Inspections Date</label>
    <type>Date</type>
</CustomField>