force-app/main/default/objects/Closing_hz__c/fields/Purchase_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Agreement_Date__c</fullName>
    <label>Purchase Agreement Date</label>
    <type>Date</type>
</CustomField>