force-app/main/default/objects/Closing_hz__c/fields/Purchase_Agreement_w_Addendums__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Agreement_w_Addendums__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Agreement w/ Addendums</label>
    <type>Checkbox</type>
</CustomField>