force-app/main/default/objects/Closing_hz__c/fields/Refs_Sent__c.field-meta.xml
<CustomField>
    <fullName>Refs_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick when you have sent the reference forms to the tenant to complete</inlineHelpText>
    <label>Refs Sent</label>
    <type>Checkbox</type>
</CustomField>