force-app/main/default/objects/Closing_hz__c/fields/Refs_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Refs_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>tick once tenant has completed &amp; submitted reference forms</inlineHelpText>
    <label>Refs Submitted</label>
    <type>Checkbox</type>
</CustomField>