force-app/main/default/objects/Closing_hz__c/fields/Remove_keys__c.field-meta.xml
<CustomField>
    <fullName>Remove_keys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remove from system, label in envelope and put in out tray</description>
    <label>Remove keys</label>
    <type>Checkbox</type>
</CustomField>