force-app/main/default/objects/Closing_hz__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <inlineHelpText>fixed term tenancy renewal date</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>