force-app/main/default/objects/Closing_hz__c/fields/Renewal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notes__c</fullName>
    <inlineHelpText>Put anything in this box regarding the renewal</inlineHelpText>
    <label>Renewal Notes</label>
    <type>TextArea</type>
</CustomField>