force-app/main/default/objects/Closing_hz__c/fields/Rent_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Due_Date__c</fullName>
    <inlineHelpText>Only add here if the rent due date changes from the assumed move in date</inlineHelpText>
    <label>Rent Due Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>