force-app/main/default/objects/Closing_hz__c/fields/Rent_Paid_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Rent_Paid_In_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rent Paid In Advance</label>
    <type>Checkbox</type>
</CustomField>