force-app/main/default/objects/Closing_hz__c/fields/Rental_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rental Agreement</label>
    <type>Checkbox</type>
</CustomField>