force-app/main/default/objects/Closing_hz__c/fields/Rental_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Date__c</fullName>
    <label>Rental Agreement Start Date</label>
    <type>Date</type>
</CustomField>