force-app/main/default/objects/Closing_hz__c/fields/Rental_Price__c.field-meta.xml
<CustomField>
    <fullName>Rental_Price__c</fullName>
    <label>Rental Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>