force-app/main/default/objects/Closing_hz__c/fields/Renter__c.field-meta.xml
<CustomField>
    <fullName>Renter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renter</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please select a contact of Tenant type</errorMessage>
        <filterItems>
            <field>Contact.Contact_Type_Multiselect_to_Text__c</field>
            <operation>contains</operation>
            <value>Tenant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Renter)</relationshipLabel>
    <relationshipName>Closings1</relationshipName>
    <type>Lookup</type>
</CustomField>