force-app/main/default/objects/Closing_hz__c/fields/Renter_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Renter_Nationality__c</fullName>
    <formula>Renter__r.OtherCountry</formula>
    <label>Renter Nationality</label>
    <type>Text</type>
</CustomField>