force-app/main/default/objects/Closing_hz__c/fields/Representing__c.field-meta.xml
<CustomField>
    <fullName>Representing__c</fullName>
    <inlineHelpText>Picklist to identify who the agent is representing.</inlineHelpText>
    <label>Representing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>