force-app/main/default/objects/Closing_hz__c/fields/Retrieve_board_on_closing_date__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_board_on_closing_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrieve board on closing date</label>
    <type>Checkbox</type>
</CustomField>