force-app/main/default/objects/Closing_hz__c/fields/Roof_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Roof_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roof Inspection</label>
    <type>Checkbox</type>
</CustomField>