force-app/main/default/objects/Closing_hz__c/fields/Roof_Inspection_Contact__c.field-meta.xml
<CustomField>
    <fullName>Roof_Inspection_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roof Inspection Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Roof Inspection Contact)</relationshipLabel>
    <relationshipName>Closings_Roof_Inspection_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>