force-app/main/default/objects/Closing_hz__c/fields/S_Sent_JMI__c.field-meta.xml
<CustomField>
    <fullName>S_Sent_JMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S - Sent JMI</label>
    <type>Checkbox</type>
</CustomField>