force-app/main/default/objects/Closing_hz__c/fields/Sale_Agreed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Agreed_Date__c</fullName>
    <label>Sale Agreed Date</label>
    <type>Date</type>
</CustomField>