force-app/main/default/objects/Closing_hz__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <inlineHelpText>Final Accepted Offer Amount = Final Sale Price</inlineHelpText>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>