force-app/main/default/objects/Closing_hz__c/fields/Saving__c.field-meta.xml
<CustomField>
    <fullName>Saving__c</fullName>
    <inlineHelpText>Total saving off asking price or estimated market value</inlineHelpText>
    <label>Saving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>