force-app/main/default/objects/Closing_hz__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the seller of the listing</description>
    <label>Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Seller)</relationshipLabel>
    <relationshipName>Closing</relationshipName>
    <type>Lookup</type>
</CustomField>