force-app/main/default/objects/Closing_hz__c/fields/Seller_Agent_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Seller_Agent_Split_Amount__c</fullName>
    <formula>Seller_Side_Split_Amount__c    *  Seller_Agent_Split_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Agent Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>