force-app/main/default/objects/Closing_hz__c/fields/Seller_Agent_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Seller_Agent_Split_Percent__c</fullName>
    <inlineHelpText>Percentage of the commission that is paid to the agent (example 50%).
Note: only complete this section if representing the seller on this transaction.</inlineHelpText>
    <label>Secondary Agent%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>