force-app/main/default/objects/Closing_hz__c/fields/Seller_Disclosures__c.field-meta.xml
<CustomField>
    <fullName>Seller_Disclosures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller Disclosures</label>
    <type>Checkbox</type>
</CustomField>