force-app/main/default/objects/Closing_hz__c/fields/Seller_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Seller_Nationality__c</fullName>
    <formula>Seller__r.OtherCountry</formula>
    <label>Seller Nationality</label>
    <type>Text</type>
</CustomField>