force-app/main/default/objects/Closing_hz__c/fields/Seller_Returned_Signed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Seller_Returned_Signed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller Returned Signed Contract</label>
    <type>Checkbox</type>
</CustomField>