force-app/main/default/objects/Closing_hz__c/fields/Seller_Returned_Starter_Forms__c.field-meta.xml
<CustomField>
    <fullName>Seller_Returned_Starter_Forms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller Returned Starter Forms</label>
    <type>Checkbox</type>
</CustomField>