force-app/main/default/objects/Closing_hz__c/fields/Seller_Side_Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Seller_Side_Split_Amount__c</fullName>
    <formula>Sale_Price__c  *  Seller_Side_Split_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Side Split Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>