force-app/main/default/objects/Closing_hz__c/fields/Seller_Side_Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Seller_Side_Split_Percentage__c</fullName>
    <inlineHelpText>Percentage of the total commission that goes to the seller side (example: 3%)</inlineHelpText>
    <label>Seller Side Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>