force-app/main/default/objects/Closing_hz__c/fields/Sellers_Sol_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Sol_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sellers Sol Confirmed</label>
    <type>Checkbox</type>
</CustomField>