force-app/main/default/objects/Closing_hz__c/fields/Sellers_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Sellers_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sellers Solicitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Sellers Solicitor)</relationshipLabel>
    <relationshipName>Closings3</relationshipName>
    <type>Lookup</type>
</CustomField>