force-app/main/default/objects/Closing_hz__c/fields/Selling_Agent__c.field-meta.xml
<CustomField>
    <fullName>Selling_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selling Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closings (Selling Agent)</relationshipLabel>
    <relationshipName>Closings4</relationshipName>
    <type>Lookup</type>
</CustomField>