force-app/main/default/objects/Closing_hz__c/fields/Send_Sales_Memo__c.field-meta.xml
<CustomField>
    <fullName>Send_Sales_Memo__c</fullName>
    <description>ONLY once AML is passed</description>
    <label>Send Sales Memo</label>
    <type>Date</type>
</CustomField>