force-app/main/default/objects/Closing_hz__c/fields/Social_Post__c.field-meta.xml
<CustomField>
    <fullName>Social_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post to Facebook &amp; Instagram</description>
    <label>Social Post</label>
    <type>Checkbox</type>
</CustomField>