force-app/main/default/objects/Closing_hz__c/fields/SS_Sent_Draft_Contracts__c.field-meta.xml
<CustomField>
    <fullName>SS_Sent_Draft_Contracts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SS = Sellers Solicitor</inlineHelpText>
    <label>SS Sent Draft Contracts</label>
    <type>Checkbox</type>
</CustomField>