force-app/main/default/objects/Closing_hz__c/fields/Survey_Info__c.field-meta.xml
<CustomField>
    <fullName>Survey_Info__c</fullName>
    <inlineHelpText>put all details of survey in here i.e. surveyor name, phone number, ref number etc</inlineHelpText>
    <label>Survey Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>