force-app/main/default/objects/Closing_hz__c/fields/SystemIsClosed__c.field-meta.xml
<CustomField>
    <fullName>SystemIsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SystemIsClosed</label>
    <type>Checkbox</type>
</CustomField>