force-app/main/default/objects/Closing_hz__c/fields/Target_Exchange_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Exchange_Date__c</fullName>
    <label>Target Exchange Date</label>
    <type>Date</type>
</CustomField>