force-app/main/default/objects/Closing_hz__c/fields/TargetClosingDate__c.field-meta.xml
<CustomField>
    <fullName>TargetClosingDate__c</fullName>
    <label>Target Closing Date</label>
    <type>Date</type>
</CustomField>