force-app/main/default/objects/Closing_hz__c/fields/Temp_field_to_be_deleted__c.field-meta.xml
<CustomField>
    <fullName>Temp_field_to_be_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp field to be deleted</label>
    <type>Checkbox</type>
</CustomField>