force-app/main/default/objects/Closing_hz__c/fields/Tenancy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenancy_End_Date__c</fullName>
    <label>Tenancy End Date</label>
    <type>Date</type>
</CustomField>