force-app/main/default/objects/Closing_hz__c/fields/Termite_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Termite_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termite Inspection</label>
    <type>Checkbox</type>
</CustomField>