force-app/main/default/objects/Closing_hz__c/fields/Testing_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Testing_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing Checkbox</label>
    <type>Checkbox</type>
</CustomField>