force-app/main/default/objects/Closing_hz__c/fields/Title_Report__c.field-meta.xml
<CustomField>
    <fullName>Title_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Report</label>
    <type>Checkbox</type>
</CustomField>