force-app/main/default/objects/Closing_hz__c/fields/Title_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Report_Date__c</fullName>
    <label>Title Report Date</label>
    <type>Date</type>
</CustomField>