force-app/main/default/objects/Closing_hz__c/fields/Total_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission__c</fullName>
    <inlineHelpText>Total Percentage of Commission paid out for both sides of this transaction.</inlineHelpText>
    <label>Total Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>