force-app/main/default/objects/Closing_hz__c/fields/Total_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Amount__c</fullName>
    <formula>Sale_Price__c  *  Total_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total amount of commission for both sides of the transaction</inlineHelpText>
    <label>Total Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>