force-app/main/default/objects/Closing_hz__c/fields/TotalCommission__c.field-meta.xml
<CustomField>
    <fullName>TotalCommission__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Rent&apos;, ( (TotalCommissionAmount__c / Rental_Price__c)), ( (TotalCommissionAmount__c /  Sale_Price__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>