force-app/main/default/objects/Closing_hz__c/fields/TotalCommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCommissionAmount__c</fullName>
    <label>Total Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>