force-app/main/default/objects/Closing_hz__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>Listing_hz__r.UnitNumber__c</formula>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>