force-app/main/default/objects/Closing_hz__c/fields/Update_Agents_Dash__c.field-meta.xml
<CustomField>
    <fullName>Update_Agents_Dash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Agents Dash</label>
    <type>Checkbox</type>
</CustomField>