force-app/main/default/objects/Closing_hz__c/fields/Update_closing_status__c.field-meta.xml
<CustomField>
    <fullName>Update_closing_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update closing status</label>
    <type>Checkbox</type>
</CustomField>