force-app/main/default/objects/Closing_hz__c/fields/Upddate_closing_date__c.field-meta.xml
<CustomField>
    <fullName>Upddate_closing_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upddate closing date</label>
    <type>Checkbox</type>
</CustomField>