force-app/main/default/objects/Closing_hz__c/fields/Work_Float_Held__c.field-meta.xml
<CustomField>
    <fullName>Work_Float_Held__c</fullName>
    <label>Work Float Held</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>