force-app/main/default/objects/Closing_hz__c/fields/Xero_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Xero_Invoice_Id__c</fullName>
    <label>Xero Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>