force-app/main/default/objects/Closing_hz__c/recordTypes/Power_Negs.recordType-meta.xml
<RecordType>
    <fullName>Power_Negs</fullName>
    <active>true</active>
    <label>Power Negs</label>
</RecordType>