force-app/main/default/objects/Closing_hz__c/validationRules/AgentCommissionShouldBeLessThanTotalComm.validationRule-meta.xml
<ValidationRule>
    <fullName>AgentCommissionShouldBeLessThanTotalComm</fullName>
    <active>true</active>
    <description>The Agent Commission value should never exceed the Total Commission Amount.</description>
    <errorConditionFormula>Agent_Commission__c  &gt;  TotalCommissionAmount__c</errorConditionFormula>
    <errorMessage>Agent Commission amount cannot be more than Total Commission Amount</errorMessage>
</ValidationRule>